objects/CRM_Tax_Rates__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Bracket_Amount__c</fullName>
        <label>Bracket Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Bracket_Max__c</fullName>
        <label>Bracket Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Bracket_Min__c</fullName>
        <label>Bracket Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Bracket_Rate__c</fullName>
        <label>Bracket Rate</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Type_Description__c</fullName>
        <label>Type Description</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Levy</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Type__c</fullName>
        <label>Type</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tax Rates</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_Bracket_Amount__c</columns>
        <columns>CRM_Bracket_Max__c</columns>
        <columns>CRM_Bracket_Min__c</columns>
        <columns>CRM_Bracket_Rate__c</columns>
        <columns>CRM_Start_Date__c</columns>
        <columns>CRM_End_Date__c</columns>
        <columns>CRM_Type__c</columns>
        <columns>CRM_Type_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Tax Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>